fix: portfolio alignment

--- a/src/app/work/work.module.scss
+++ b/src/app/work/work.module.scss
@@ -21,9 +21,10 @@
   gap: 2.5rem;
   flex-direction: column;
   justify-content: center;
-  align-items: stretch;
+  align-items: center;
   @media (min-width: 1024px) {
     flex-flow: row wrap;
+    align-items: stretch;
     & > a {
       flex-basis: 40%;
     }
